beta changelist: adds config improvement

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,8 @@
 .image-div {
   display: flex;
   align-items: center;
+  justify-content: center;
+  border: 1px solid black;
 
   .image1 {
     margin-right: 30px;
